<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#717f80">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        >

        <TextView
            android:layout_marginBottom="30dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_title"
            android:id="@+id/title"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/spotify_app_name"
            android:id="@+id/spotify_app_button"
            android:layout_gravity="center_horizontal"
            android:background="#b75713"
            android:onClick="postToast"/>

        <Button
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/scores_app_name"
            android:id="@+id/scores_app_button"
            android:layout_gravity="center_horizontal"
            android:background="#b75713"
            android:onClick="postToast"/>

        <Button
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/library_app_name"
            android:id="@+id/library_app_button"
            android:layout_gravity="center_horizontal"
            android:background="#b75713"
            android:onClick="postToast"/>

        <Button
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger_app_name"
            android:id="@+id/build_it_bigger_app_button"
            android:layout_gravity="center_horizontal"
            android:background="#b75713"
            android:onClick="postToast"/>

        <Button
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader_app_name"
            android:id="@+id/xyz_reader_app_button"
            android:layout_gravity="center_horizontal"
            android:background="#b75713"
            android:onClick="postToast"/>

        <Button
            android:layout_margin="@dimen/button_margin"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/capstone_app_name"
            android:id="@+id/capstone_app_button"
            android:layout_gravity="center_horizontal"
            android:background="#b71313"
            android:onClick="postToast"/>
    </LinearLayout>
</RelativeLayout>
